Remove scrollbar, (hopefully) fix close button

--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ nav button {
 /* ==================== */
 
 .modal {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   top: 0;
   right: 0;
@@ -138,23 +138,24 @@ nav button {
   width: 80vw;
   height: 90vh;
   margin: auto;
-  border: none;
+  border: 1px solid #444;
   outline: none;
   overflow: hidden;
 }
-
 .modal-close-button {
   position: fixed;
-  top: 8vh;
+  top: 10vh;
   right: 12vw;
   padding: 0.25rem;
   font-size: 1.5rem;
-  height: 2rem;
-  width: 2rem;
+  min-height: 2rem;
+  max-height: 2rem;
+  min-width: 2rem;
+  max-width: 2rem;
   border: none;
   border-radius: 50%;
   color: #ccc;
-  background-color: #111;
+  background-color: #222;
   align-items: center;
   text-align: center;
 }
@@ -799,22 +800,6 @@ blockquote {
     font-size: 1rem;
   }
 
-  .intro-modal-wrapper {
-    z-index: 3;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    height: 40vh;
-    margin: auto;
-    border: none;
-    outline: none;
-    background: #222;
-  }
-
   .immersive-video-wrapper {
     position: relative;
     width: 100%;
@@ -829,6 +814,12 @@ blockquote {
     top: 8vh;
     width: 100vw;
     height: 92vh;
+  }
+
+  .modal-close-button {
+    position: fixed;
+    top: 2vh;
+    right: 8vw;
   }
 
   .modal iframe {
